--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Rails Stripe Membership Saas", root_path, :class => 'brand' %>
+<%= link_to "Rails Membership Subscription Saas", root_path, :class => 'brand' %>
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
@@ -18,9 +18,5 @@
       <%= link_to 'Admin', users_path %>
       </li>
     <% end %>
-  <% else %>
-    <li>
-    <%= link_to 'Sign up', new_user_registration_path %>
-    </li>
   <% end %>
 </ul>
