--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -61,7 +61,7 @@
       </div>
       <div class="field">
         <%= label_tag :card_month, "Card Expiration" %>
-        <%= select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}%>
+        <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}%>
         <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+10}, {name: nil, id: "card_year"}%>
       </div>
       <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
