change button class on inedit page

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
       <%= f.password_field :current_password %></div>
     </div>
     <div class="modal-footer">
-      <%= f.submit "Change Plan", :class => "btn.btn-success" %>
+      <%= f.submit "Change Plan", :class => "btn btn-primary" %>
       <a class="btn" data-dismiss="modal" href="#">Close</a>
     </div>
   <% end %>
@@ -71,7 +71,7 @@
       <%= f.hidden_field :stripe_token %>
     </div>
     <div class="modal-footer">
-      <%= f.submit "Change Credit Card", :class => "btn.btn-success" %>
+      <%= f.submit "Change Credit Card", :class => "btn btn-primary" %>
       <a class="btn" data-dismiss="modal" href="#">Close</a>
     </div>
   <% end %>
