add option to use a coupon when subscribing (fix issue #36)

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,6 +29,9 @@
       <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}%>
       <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+10}, {name: nil, id: "card_year"}%>
     </div>
+    <div class="field">
+      <%= f.input :coupon, :label => 'Promotional Coupon (if any)' %>
+    </div>
   <% end %>
   <%= f.hidden_field :stripe_token %>
   <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
