--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
-<div id="welcome" class="hero-unit span7">
-  <h1>Membership Site</h1>
-  <h3>Learn to build a successful subscription site.</h3>
+<div id="welcome" class="hero-unit span10">
+  <h1><%= content_for?(:h1) ? yield(:h1) : ENV['SLOGAN'] %></h1>
+  <h3><%= content_for?(:h3) ? yield(:h3) : ENV['DESC'] %></h3>
 </div>
 <div class="row">
   <div class="col-md-4 well">
     <div class="plan"><h2>Silver</h2></div>
     <ul class="unstyled">
-      <li>One lesson a month</li>
+      <li>Follow 20 <%= content_for?(:h1) ? yield(:h1) : ENV['TYPE'] %>s a month</li>
     </ul>
     <h3>$9/month</h3>
     <%= link_to 'Subscribe', new_user_registration_path(:plan => 'silver'), :class => 'btn btn-primary' %> 
@@ -14,7 +14,7 @@
   <div class="col-md-4 well featured">
     <div class="plan featured-plan"><h2>Gold</h2></div>
     <ul class="unstyled">
-      <li>Ten lessons a month</li>
+      <li>Follow 1 Category a month</li>
     </ul>
     <h3>$19/month</h3>
     <%= link_to 'Subscribe', new_user_registration_path(:plan => 'gold'), :class => 'btn btn-primary' %> 
@@ -22,7 +22,7 @@
   <div class="col-md-4 well">
     <div class="plan"><h2>Platinum</h2></div>
     <ul class="unstyled">
-      <li>Thirty lessons a month</li>
+      <li>Follow multiple Categories a month</li>
     </ul>
     <h3>$29/month</h3>
     <%= link_to 'Subscribe', new_user_registration_path(:plan => 'platinum'), :class => 'btn btn-primary' %> 
