--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,8 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
+  <%= f.input :first_name, :autofocus => true %>
+  <%= f.input :last_name, :autofocus => true %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
   <%= f.input :password_confirmation, :required => false %>
@@ -66,7 +67,8 @@
         <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}%>
         <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+10}, {name: nil, id: "card_year"}%>
       </div>
-      <%= f.hidden_field :name %>
+      <%= f.hidden_field :first_name %>
+      <%= f.hidden_field :last_name %>
       <%= f.hidden_field :email %>
       <%= f.hidden_field :stripe_token %>
     </div>
