--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
-<div id="welcome" class="hero-unit span10">
-  <h1><%= content_for?(:h1) ? yield(:h1) : ENV['SLOGAN'] %></h1>
-  <h3><%= content_for?(:h3) ? yield(:h3) : ENV['DESC'] %></h3>
+<div id="welcome" class="page-header">
+  <h1><%= content_for?(:h1) ? yield(:h1) : ENV['SLOGAN'] %> <small> <%= content_for?(:h3) ? yield(:h3) : ENV['DESC'] %></small></h1>
 </div>
 <div class="row">
   <div class="col-md-4 well">
