--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Categories</h1>
+<div class="page-header">
+	<h1>Categories</h1>
+</div>
 <div class="span8">
 <% @categories.each do |category| %>
   <p><%= category.name %></p>
