--- a/app/views/content/platinum.html.erb
+++ b/app/views/content/platinum.html.erb
@@ -1,2 +1,4 @@
-<h1>Content#platinum</h1>
+<div class="page-header">
+	<h1>Welcome <%= current_user.first_name %> to your <b>Platinum</b> Membership</h1>
+</div>
 <p>Find me in app/views/content/platinum.html.erb</p>
