--- a/app/views/content/silver.html.erb
+++ b/app/views/content/silver.html.erb
@@ -1,2 +1,4 @@
-<h1>Content#silver</h1>
+<div class="page-header">
+	<h1>Welcome <%= current_user.first_name %> to your <b>Silver</b> Membership</h1>
+</div>
 <p>Find me in app/views/content/silver.html.erb</p>
