--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,6 @@
-<h1><%= "#{RubySAAS::Application::SITE['TYPE']}s" %></h1>
+<div class="page-header">
+	<h1><%= "#{ENV['TYPE']}s" %></h1>
+</div>
 <div class="span8">
 <% @items.each do |item| %>
   <p><%= item.name %></p>
