--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listings</h1>
+<div class="page-header">
+	<h1>Listings</h1>
+</div>
 <div class="span8">
 <% @listings.each do |listing| %>
   <p><a href="<%= listing.url %>" target="_blank"><%= listing.name %></a></p>
