--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Organizations</h1>
+<div class="page-header">
+	<h1>Organizations</h1>
+</div>
 <div class="span8">
 <% @organizations.each do |organization| %>
   <p><%= organization.name %></p>
