--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Tags</h1>
+<div class="page-header">
+	<h1>Tags</h1>
+</div>
 <div class="span8">
 <% @tags.each do |tag| %>
   <p><%= tag.name %></p>
