--- a/app/views/taxonomies/index.html.erb
+++ b/app/views/taxonomies/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Taxonomies</h1>
+<div class="page-header">
+	<h1>Taxonomies</h1>
+</div>
 <div class="span8">
 <% @taxonomies.each do |taxonomy| %>
   <p><%= taxonomy.name %></p>
