--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<h3>Users</h3>
+<div class="page-header">
+  <h3>Users</h3>
+</div>
 <div class="span8">
 <table class="table table-condensed">
   <thead>
