--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
-<h3>User</h3>
+<div class="page-header">
+	<h3>User</h3>
+</div>
 <p>User: <%= @user.user_name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
