Adding Unknowns Controller

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -29,6 +29,11 @@
 
     <li class="divider"></li>
 
+    <li><%= link_to 'Unknowns', unknowns_path %></li>
+
+      <li class="divider"></li>
+
+
     <li><%= link_to 'Taxonomies', taxonomies_path %></li>
     
     <li><%= link_to 'Tags', tags_path %></li>
