--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,8 +1,18 @@
 <div class="page-header">
 	<h1>Listings</h1>
 </div>
-<div class="span8">
-<% @listings.each do |listing| %>
-  <p><a href="<%= listing.url %>" target="_blank"><%= listing.name %></a></p>
+
+<% @listings.each_with_index do |listing, index| %>
+  
+  <% if index % 4 == 0 %><div class="row"><% end %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="<%= listing.image %>" alt="<%= listing.name %>">
+        <div class="caption">
+	        <p><%= listing.name[0..40] %>...</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Follow</a>
+        </div>
+      </div>
+    </div>
+  <% if index+3 % 4 == 0 %></div><hr><% end %>
 <% end %>
-</div>
