--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -14,5 +14,5 @@
         </div>
       </div>
     </div>
-  <% if index+3 % 4 == 0 %></div><hr><% end %>
+  <% if index-3 % 4 == 0 %></div><hr><% end %>
 <% end %>
