--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,9 +9,9 @@
         <div class="caption">
 	        <p><%= link_to listing.name[0..40]+"...", listing_path(listing) %></p>
           <% if current_user.following?(listing) %>
-          <%= link_to "Unfollow Listing", unfollow_listing_path(listing), :class => "btn btn-success" %>
+          <%= link_to "Unfollow Listing", unfollow_listing_path(listing), :class => "btn btn-danger" %>
           <% else %>
-          <%= link_to "Follow Listing", follow_listing_path(listing), :class => "btn btn-primary" %>
+          <%= link_to "Follow Listing", follow_listing_path(listing), :class => "btn btn-success" %>
           <% end %>
           </p>
         </div>
