--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <li class="dropdown" id="menu1">
   <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1"> 
-    <%= ENV['TYPE'] %> Dashboard
+    Dashboard
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
