--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,11 +6,15 @@
 	<div class="col-sm-6 col-md-4">
       <div class="thumbnail">
       	<img src="<%= @listing.image %>" alt="<%= @listing.name %>">
+        <br>
       	<p align="center"><% if current_user.following?(@listing) %>
           <%= link_to "Unfollow Listing", unfollow_listing_path(@listing), :class => "btn btn-danger" %>
         <% else %>
           <%= link_to "Follow Listing", follow_listing_path(@listing), :class => "btn btn-success" %>
-        <% end %></p>
+        <% end %> 
+
+        <%= link_to "Visit Full Listing", @listing.url, :class => "btn btn-default", :target => "_blank" %></p>
+
       </div>
     </div>
     <div class="col-sm-6 col-md-8">
