--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
 	<h1>Tags</h1>
 </div>
-<div class="span8">
+<div class="row">
 <% @tags.each do |tag| %>
-  <p><%= tag.name %></p>
+  <div class="col-md-2 well" align="center"><%= tag.name %></div>
 <% end %>
 </div>
