Fixed Taxonomies and api controller

--- a/app/views/taxonomies/index.html.erb
+++ b/app/views/taxonomies/index.html.erb
@@ -1,8 +1,9 @@
 <div class="page-header">
 	<h1>Taxonomies</h1>
 </div>
-<div class="span8">
+<div class="row">
 <% @taxonomies.each do |taxonomy| %>
-  <p><%= taxonomy.name %></p>
+  <div class="col-md-3 well" align="center"><strong><%= taxonomy.name %></strong> - <%= taxonomy.type %></div>
 <% end %>
 </div>
+
