--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,22 +1,28 @@
 <div class="page-header">
 	<h1>Listings</h1>
 </div>
-<div class="row">
+<%= will_paginate @listings, renderer: BootstrapPagination::Rails %>
 <% @listings.each_with_index do |listing, index| %>
-    <div class="col-sm-6 col-md-2">
-      <div class="thumbnail">
-        <a href="<%= listing_path(listing) %>"><img src="<%= listing.image %>" alt="<%= listing.name %>"></a>
-        <div class="caption">
-	        <p><%= link_to listing.name[0..40]+"...", listing_path(listing) %></p>
-          <% if current_user.following?(listing) %>
-          <%= link_to "Unfollow Listing", unfollow_listing_path(listing), :class => "btn btn-danger" %>
-          <% else %>
-          <%= link_to "Follow Listing", follow_listing_path(listing), :class => "btn btn-success" %>
-          <% end %>
-          </p>
+  <% if index % 6 == 0 %> 
+    <div class="row">
+  <% end %>
+
+      <div class="col-sm-6 col-md-2">
+        <div class="thumbnail">
+          <a href="<%= listing_path(listing) %>"><img src="<%= listing.image %>" alt="<%= listing.name %>"></a>
+          <div class="caption">
+  	        <p><%= link_to listing.name[0..40]+"...", listing_path(listing) %></p>
+            <% if current_user.following?(listing) %>
+            <%= link_to "Unfollow Listing", unfollow_listing_path(listing), :class => "btn btn-danger" %>
+            <% else %>
+            <%= link_to "Follow Listing", follow_listing_path(listing), :class => "btn btn-success" %>
+            <% end %>
+            </p>
+          </div>
         </div>
       </div>
+
+  <% if index-5 % 6 == 0 && index != 0 %> 
     </div>
+  <% end %>
 <% end %>
-</div>
-<%= will_paginate @listings %>
