--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
               <%= yield %>
           <footer>
           <%= link_to_function "Back", "history.back()", :class => "btn btn-default" %>
-          <p align="right">Copyright &copy; <%= ENV['NAME'] %></p>
+          <p align="right"><small>Copyright &copy; <%= ENV['NAME'] %></small></p>
           </footer>
       </div> <!--! end of .container -->
   </body>
