--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1><%= @listing.name %></h1>
+	<h1><%= @listing.name %> <small><%= @listing.organization.name %></small></h1>
 </div>
 
 <div class="row">
