Updated Memberships and front page with top follows

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -31,3 +31,5 @@
 	<a class="list-group-item" href="<%= listing_path(listing) %>"><%= listing.name %><span class="badge"><%= listing.organization.name %></span></a>
 <% end rescue nil%> 
 </div>
+
+<%= link_to_function "Back", "history.back()", :class => "btn btn-default" %>
