--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -4,6 +4,20 @@
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
+
+      <% if current_user.has_role? :admin %>
+      <li><a href="/content/silver">Silver</a></li>
+      <li><a href="/content/gold">Gold</a></li>
+      <li><a href="/content/platinum">Platinum</a></li>
+
+      <li class="divider"></li>
+
+      <% else %>
+
+      <li><a href="/content/<%= current_user.roles.first %>">Follows</a></li>
+
+      <% end %>
+
       <li><%= link_to 'Categories', categories_path %></li>
       
       <li><%= link_to 'Listings', listings_path %></li>
