--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,30 +1,10 @@
-<li class="dropdown" id="menu1">
-  <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1"> 
-    Dashboard
-    <b class="caret"></b>
-  </a>
-  <ul class="dropdown-menu">
+<% if !current_user.has_role? :admin %>
+  <li><a href="/content/<%= current_user.roles.first.name %>">Dashboard</a></li>
+<% end %>
 
-      <% if current_user.has_role? :admin %>
-      <li><a href="/content/silver">Silver</a></li>
-      <li><a href="/content/gold">Gold</a></li>
-      <li><a href="/content/platinum">Platinum</a></li>
-
-      <li class="divider"></li>
-
-      <% else %>
-
-      <li><a href="/content/<%= current_user.roles.first %>">Follows</a></li>
-
-      <% end %>
-
-      <li><%= link_to 'Categories', categories_path %></li>
+<li><%= link_to 'Categories', categories_path %></li>
       
-      <li><%= link_to 'Listings', listings_path %></li>
-
-      <li><%= link_to "#{ENV['TYPE']}s", items_path %></li>
-  </ul>
-</li>
+<li><%= link_to 'Listings', listings_path %></li>
 
 <% if current_user.has_role? :admin %>
 
@@ -41,6 +21,14 @@
 
     <li class="divider"></li>
 
+      <li><a href="/content/silver">Silver</a></li>
+      <li><a href="/content/gold">Gold</a></li>
+      <li><a href="/content/platinum">Platinum</a></li>
+
+    <li class="divider"></li>
+
+    <li><%= link_to "#{ENV['TYPE']}s", items_path %></li>
+
     <li><%= link_to 'Unknowns', unknowns_path %></li>
 
       <li class="divider"></li>
@@ -53,6 +41,7 @@
       <li class="divider"></li>
 
       <li><%= link_to 'Organizations', organizations_path %></li>
+
   </ul>
 </li>
 
