Major changes to Pricing Table and speed up controllers with ||=

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,20 @@
 <div id="welcome" class="page-header">
   <h1><%= content_for?(:h1) ? yield(:h1) : ENV['SLOGAN'] %> <small> <%= content_for?(:h3) ? yield(:h3) : ENV['DESC'] %></small></h1>
 </div>
-<h3 align="right">Top 6 Most Followed Listings</h3>
+<h3 align="right">Top 5 Most Followed Listings</h3>
 <div class="row">
+
+<div class="col-sm-6 col-md-2">
+<% @organizations.each do |organization| %>
+  <ul class="list-group">
+  <li class="list-group-item">
+    <span class="badge"><%= organization.listings.count %></span>
+      <%= organization.name %>
+    </li>
+  </ul>
+<% end %>
+</div>
+
 <% @listings.each_with_index do |listing, index| %>
       <div class="col-sm-6 col-md-2">
         <div class="thumbnail">
@@ -24,29 +36,29 @@
 
 <% if !user_signed_in? %>
 <div class="row">
-  <div class="col-md-4 well">
-    <div class="plan"><h2>Silver</h2></div>
-    <ul class="unstyled">
-      <li>Follow 20 <%= content_for?(:h1) ? yield(:h1) : ENV['TYPE'] %>s a month</li>
-    </ul>
-    <h3>$2.99/month</h3>
-    <%= link_to 'Subscribe', new_user_registration_path(:plan => 'silver'), :class => 'btn btn-primary' %> 
+  <div class="col-md-4">
+    <div class="thumbnail">
+    <div class="well" align="center"><h2>Silver</h2></div>
+    <p align="center">Follow 20 <%= content_for?(:h1) ? yield(:h1) : ENV['TYPE'] %>s a month</p>
+    <h3 align="center">$5.99/month</h3>
+    <p align="center"><%= link_to 'Subscribe', new_user_registration_path(:plan => 'silver'), :class => 'btn btn-primary' %></p>
+    </div>
   </div>
-  <div class="col-md-4 well featured">
-    <div class="plan featured-plan"><h2>Gold</h2></div>
-    <ul class="unstyled">
-      <li>Follow 1 Category a month</li>
-    </ul>
-    <h3>$29.99/month</h3>
-    <%= link_to 'Subscribe', new_user_registration_path(:plan => 'gold'), :class => 'btn btn-primary' %> 
+  <div class="col-md-4">
+    <div class="thumbnail">
+    <div class="well" align="center"><h2>Gold</h2></div>
+    <p align="center">Follow 1 Category a month</p>
+    <h3 align="center">$59.99/month</h3>
+    <p align="center"><%= link_to 'Subscribe', new_user_registration_path(:plan => 'gold'), :class => 'btn btn-primary' %> </p>
+    </div>
   </div>
-  <div class="col-md-4 well">
-    <div class="plan"><h2>Platinum</h2></div>
-    <ul class="unstyled">
-      <li>Follow multiple Categories a month</li>
-    </ul>
-    <h3>$299.99/month</h3>
-    <%= link_to 'Subscribe', new_user_registration_path(:plan => 'platinum'), :class => 'btn btn-primary' %> 
+  <div class="col-md-4">
+    <div class="thumbnail">
+    <div class="well" align="center"><h2>Platinum</h2></div>
+    <p align="center">Follow Multiple Categories a month</p>
+    <h3 align="center">$599.99/month</h3>
+    <p align="center"><%= link_to 'Subscribe', new_user_registration_path(:plan => 'platinum'), :class => 'btn btn-primary' %> </p>
+    </div>
   </div>
 </div>
 <% end %>
