fixed location of pricing table

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1><%= @category.nil? ? 'Categories' : @category.name %></h1>
+	<h1><%= @category.nil? ? 'Available Categories' : @category.name %></h1>
 </div>
 
 <% @categories.each do |category| %>
