--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1><%= "#{ENV['TYPE']}s" %></h1>
+	<h1>Our Latest <%= "#{ENV['TYPE']}s" %></h1>
 </div>
 <div class="span8">
 <% @items.each do |item| %>
