--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Listings</h1>
+	<h1>Our Latest Listings</h1>
 </div>
 <%= will_paginate @listings, renderer: BootstrapPagination::Rails %>
 <% @listings.each_with_index do |listing, index| %>
