--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,7 +10,7 @@
       	<p align="center"><% if current_user.following?(@listing) %>
           <%= link_to "Unfollow Listing", unfollow_listing_path(@listing), :class => "btn btn-danger" %>
         <% else %>
-          <%= link_to "Follow Listing", follow_listing_path(@listing), :class => "btn btn-success" %>
+          <%= link_to 'Follow Listing', follow_listing_path(@listing), :class => "btn btn-success" %>
         <% end %> 
 
         <%= link_to "Visit Full Listing", @listing.url, :class => "btn btn-default", :target => "_blank" %></p>
