Updated Promotional Code

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,9 +45,9 @@
     </div>
     <br>
 
-    <div class="field">
-      <%= label_tag :card_code, "Card Security Code (CVV)" %>
-      <%= text_field_tag :card_code, nil, name: nil %>
+    <div class="input-group input-group-lg field">
+      <span class="input-group-addon">Card Security Code (CVV)</span>
+      <input class="form-control" id="card_code" type="text" />
     </div>
     <br>
 
