Fixed Admin Controller for Get_URLS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <div class="row">
           <br>
           <p align="center"><a target="_blank" class = "btn btn-danger" href="<%= ENV['CONTACT_PAGE'] %>">Report a Problem</a></p>
-          <small>Copyright &copy; <%= ENV['NAME'] %></small>
+          <p align="center"><small>Copyright &copy; <%= ENV['NAME'] %></small></p>
           </div>
       </div> <!--! end of .container -->
   </body>
